<resources>
    <string name="app_name">Notes</string>
    <string name="remove_button_label">удалить</string>
    <string name="add_new_note_button_label">Новая заметка</string>
    <string name="cancel_button_label">закрыть</string>
    <string name="ok_button_label">сохранить</string>
    <string name="delete">Delete</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="new_note_title">New Note Title</string>
    <string name="dialog_ok_button_label">OK</string>
    <string name="ColorsListFragment_not_on_screen">ColorsListFragment not on screen</string>
    <string name="backpressed_message"><![CDATA[One more \'back\', or --->]]></string>
    <string name="snackbar_button_label">click me to exit</string>
    <string name="add_note">Add Note</string>
    <string name="search">Search</string>
    <string name="save_note_menu_label">Save Note</string>
    <string name="delete_note_menu_label">Delete Note</string>
    <string name="on_save_toast_message">Saved</string>
    <string name="on_delete_toast_message">Deleted</string>
    <string name="clear">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_counter">Show Launch Counter</string>
</resources>