<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_details_root_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBEED1"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FBEED1"
        android:textSize="48sp"
        tools:text="Заметка" />

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|center_vertical"
        android:inputType="textMultiLine"
        android:lines="25"
        android:maxLines="50"
        android:minLines="15"
        android:padding="4dp"
        android:scrollbars="vertical"
        android:textSize="24sp"
        tools:text="Текст заметки"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/remove_button_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cancel_button_label" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ok_button_label" />

    </LinearLayout>

</LinearLayout>
